# TreeNGB

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  geometry.c  geometry.h  main.c  morton.c  morton.h  omp.h  particle.c  particle.h  proto.h  tree.c  tree.h
tests/: CMakeLists.txt  allTests.cpp  testGeometry.cpp  testMorton.cpp  testParticle.cpp  testTree.cpp
